# schulbus-analyse

./: .gitignore  pyproject.toml
src/schulbus_analyse/: calendar.py  cli.py  data.py  report.py  stats.py
tests/: test_calendar.py  test_data.py  test_stats.py
