[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schulbus-analyse"
version = "0.1.0"
description = "Pünktlichkeitsanalyse Linie 727 → Zeesen Schule"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
schulbus-analyse = "schulbus_analyse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/schulbus_analyse"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
